<resources>
    <string name="app_name">6 Keys</string>
    <string name="answer">Ответить</string>
    <string name="solveMath">Решите пример</string>
    <string name="areYouSure">Выйти? Задание будет прервано.</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="correct">Верно!</string>
    <string name="incorrect">Неверно.</string>
    <string name="start">Начать</string>
    <string name="exit">Выйти</string>
    <string name="prefs">Настройки</string>
    <string name="back">Назад</string>
    <string name="sound">Звук </string>
    <string name="music">Музыка </string>
    <string name="startTask">Приступить к заданию</string>
    <string name="keysCount">Количество ключей</string>
    <string name="goInside">Зайти внутрь</string>
    <string name="solveCard">Выберите правильные карточки</string>
    <string name="knowCard">Запомните карточки</string>
    <string name="pickCard">Выберите карточку</string>
    <string name="card1">Звезда</string>
    <string name="card2">Молния</string>
    <string name="card3">Многоконечная звезда</string>
    <string name="card4">Месяц</string>
    <string name="timeIsUp">Время истекло!</string>
    <string name="gameOver">Игра окончена.</string>
    <string name="taskPassed">Задание выполнено.</string>
    <string name="tooMuchAttempts">Вы слишком много ошибались!</string>
    <string name="time">Оставшееся время: </string>
    <string name="attempts">Неверных попыток сделано: </string>
    <string name="solveLogic">Решите задачу</string>
    <string name="howManyBalls">Сколько здесь мячей?</string>
    <string name="whatPercent">Какой процент трубы заполнен?</string>
    <string name="whatAngle">Какой здесь угол [0;179]?</string>
    <string name="tooLowPercentage">Слишком далеко от истинного значения!</string>
    <string name="guessPercentage">Процент точности: </string>
    <string name="guessWriteOption">Выберите правильный вариант ответа</string>
    <string name="father">Отец: </string>
    <string name="girl">Девушка: </string>
    <string name="you">Вы: </string>
    <string name="ending_part1">Здравствуй, юноша!</string>
    <string name="ending_part2">Я вижу, что ты справился со всеми моими заданиями!</string>
    <string name="ending_part3">Не волнуйся, твоей девушке ничего не грозит.</string>
    <string name="ending_part4">Я её отец, поэтому никогда не обижу её.</string>
    <string name="ending_part4_g">Это правда! Прости меня, что не сказала тебе раньше!</string>
    <string name="ending_part5">Всё это было проверкой, и ты её прошел! Поздравляю!</string>
    <string name="ending_part6">Теперь, когда ты доказал, что у тебя в голове что-то есть, ты можешь жениться на моей дочери.</string>
    <string name="ending_part7">Можешь считать это официальным благословением.</string>
    <string name="ending_part8">Также, я принял решение устроить тебя на работу в мою компанию.</string>
    <string name="ending_part9">Ты показал себя молодцом, мне нужны такие сотрудники!</string>
    <string name="ending_part9_u">Спасибо тебе, Отец! Спасибо за всё!</string>
    <string name="entered_end">Вы открываете массивную стальную дверь…</string>
    <string name="end_game">КОНЕЦ ИГРЫ.</string>
    <string name="end_game_score">Ваш счёт: </string>
    <string name="task_brief">Описание задания</string>
    <string name="ready">Я готов :)</string>
    <string name="not_ready">Отмена -_-</string>
    <string name="task_1">Решите 10 примеров за отведенное время. Старайтесь не ошибаться!</string>
    <string name="task_2">Выполните оценочные задания с наибольшей точностью ответа.</string>
    <string name="task_3">Решите задачу. У вас три попытки.</string>
    <string name="task_4">Решите задачу с картинкой. У вас одна попытка.</string>
    <string name="task_5">Запомните карточки и восстановите их!</string>
    <string name="task_6">Безошибочно ответьте на 3 вопроса.</string>
    <string name="to_menu">В меню</string>
    <string name="reset">Сбросить счет</string>
    <string name="score_saved">Ваш счет сохранен.</string>
    <string name="record">Рекорд: </string>
    <string name="hello">Добро пожаловать!</string>
    <string name="description">Вашу девушку похитили и заперли вон за той здоровенной железной дверью!
        Решите все загадки, чтобы получить 6 ключей, которыми вы сможете открыть эту дверь и спасти вашу девушку!
    Все загадки имеют лимит времени и неудачных попыток, так что будьте внимательны!</string>
    <string name="got_it">Понял!</string>
    <string name="exit_confirm">Точно хотите выйти?</string>
</resources>