<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="54sp" />


    <Button
        android:id="@+id/MenuButtonStart"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:text="@string/start"
        android:textSize="32sp" />

    <Button
        android:id="@+id/MenuButtonPref"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:text="@string/prefs"
        android:textSize="32sp" />

    <Button
        android:id="@+id/MenuButtonExit"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:text="@string/exit"
        android:textSize="32sp" />

</LinearLayout>