<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="40dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/prefs"
        android:textSize="54sp" />

    <CheckBox
        android:id="@+id/MenuButtonStart"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:textSize="32sp"
        android:text="@string/music"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        android:checked="true"/>

    <CheckBox
        android:id="@+id/MenuButtonPref"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:textSize="32sp"
        android:text="@string/sound"
        android:background="@color/white"
        android:checked="true"/>

    <Button
        android:id="@+id/PrefButtonExit"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:textSize="32sp"
        android:text="@string/back" />

</LinearLayout>